# particleGL

./: .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  clean.sh  cmake.sh  makeAndRun.sh  run.sh
config/: root.h.conf
include/glad/: glad.h
lib/sdl/macos/: libSDL2-2.0.0.dylib
lib/sdl/macos/cmake/SDL2/: sdl2-config.cmake
lib/sdl/macos/pkgconfig/: sdl2.pc
src/: glad.c  main.cpp
src/consoleMsg/: consoleMsg.cpp  consoleMsg.hpp
src/controlGUI/: controlGUI.cpp  controlGUI.hpp
src/engine/: particleGL.cpp  particleGL.hpp  physics.hpp
src/engine/camera/: camera.cpp  camera.hpp
src/engine/emitter/: emitter.cpp  emitter.hpp  particle.hpp
src/engine/eventManager/: eventManager.cpp  eventManager.hpp
src/engine/geometries/: geometry.cpp  geometry.hpp  sphere.cpp  sphere.hpp  square.cpp  square.hpp  triangle.cpp  triangle.hpp
src/engine/particle/: particle.hpp
src/engine/particle/geometries/: geometry.hpp  sphere.cpp  sphere.hpp
src/engine/renderer/: renderBuffer.cpp  renderBuffer.hpp  renderer.cpp  renderer.hpp
src/engine/resource/: fileReader.cpp  fileReader.hpp  pathParser.cpp  pathParser.hpp  shader.cpp  shader.hpp  shaderParser.cpp  shaderParser.hpp  texture.cpp  texture.hpp
src/engine/shader/: shader.hpp
src/shaders/: geometry.frag  geometry.vert  screen.frag  screen.vert  test.vert
src/shaders/fx/: feather.frag
src/shaders/geometry/: geoUniformColor.frag  geoUniformModelUniformColor.vert  geoUniformModelVaringColor.vert  geoVaringColor.frag  geoVaringModelUniformColor.vert  geoVaringModelVaringColor.vert
src/shaders/texture/: textureUniformColor.frag  textureVaringColor.frag
src/util/: interpolations.hpp  makeUnique.hpp  randGen.cpp  randGen.hpp
